BufferPool now returns a PooledByteBuffer instead of ByteBuffer. The new PooledByteBuffer will keep track of the original ByteBuffer when the ByteBuffer it exposes is a slice. This allowed the removal of the DirectBuffer class that accessed internals and needed sun.nio.ch to be exported.